Downgraded some syntax to JDK 11 and recompiled the .jar file in JDK 11.